@@ -1,7 +1,7 @@
 //
 // Net.h
 //
-// $Id: //poco/1.3/Net/include/Poco/Net/Net.h#6 $
+// $Id: //poco/1.3/Net/include/Poco/Net/Net.h#7 $
 //
 // Library: Net
 // Package: NetCore
@@ -81,13 +81,13 @@ namespace Poco {
 namespace Net {
 
 
-void initializeNetwork();
+void Net_API initializeNetwork();
 	/// Initialize the network subsystem.
 	/// Calls WSAStartup() on Windows, does nothing
 	/// on other platforms.
 
 
-void uninitializeNetwork();
+void Net_API uninitializeNetwork();
 	/// Uninitialize the network subsystem.
 	/// Calls WSACleanup() on Windows, does nothing
 	/// on other platforms.
