@@ -1,5 +1,5 @@
 #
-# $Id: //poco/1.3/build/config/iPhone#3 $
+# $Id: //poco/1.3/build/config/iPhone#4 $
 #
 # iPhone
 #
@@ -89,7 +89,7 @@ RELEASEOPT_LINK =
 #
 # System Specific Flags
 #
-SYSFLAGS = -DPOCO_HAVE_IPv6 -DPOCO_NO_FPENVIRONMENT -DPOCO_NO_STAT64
+SYSFLAGS = -DPOCO_HAVE_IPv6 -DPOCO_NO_FPENVIRONMENT -DPOCO_NO_STAT64 -DPOCO_NO_SHAREDLIBS
 
 #
 # System Specific Libraries
